Finish new-tournament

--- a/config/locales/models/models_ja.yml
+++ b/config/locales/models/models_ja.yml
@@ -2,12 +2,25 @@ ja:
   activerecord:
     models:
       user: ユーザー
+      tournament: トーナメント
     attributes:
-        user:
-          id: ID
-          name: 名前
-          email: メールアドレス
-          password: パスワード
-          password_confirmation: パスワード再入力
-          created_at: 作成日
-          updated_at: 更新日
+      user:
+        id: ID
+        name: 名前
+        email: メールアドレス
+        password: パスワード
+        password_confirmation: パスワード再入力
+        created_at: 作成日
+        updated_at: 更新日
+      tournament:
+        start_time: 開始日時
+        private: 公開設定
+        name: 大会名
+        url: URL
+        game_title: ゲームタイトル
+        elimination_type: 対戦方式
+        description: 大会説明
+        master: 管理者
+        status: ステータス
+        particepants: 参加者
+        group_stage_enabled: 形式
